src/test/compile-fail/issue-2478.rs
// xfail-test
fn foo() -> &a/int {
    return &x;
}
const x: int = 5;
fn main() {}
